--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 *{
     margin: 0;
     box-sizing: border-box;
-    background-color: #0a192f;
     font-family: SpaceMono-Regular;
     padding: 0;
 }
-
+body{
+    background-color: #0a192f;;
+}
 .content{
     display: none;
 
@@ -18,22 +19,32 @@
 @keyframes fade {
     from {opacity: 0;}
     to {opacity: 1;}
-    
+
 }
 
-
-nav{
+ #navbar {
     height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 50px;
+    position: sticky;
+    top: 0;
+    background-color: transparent;
+    transition: background-color 0.3s ease;
 }
+
+#navbar.scroll {
+    background-color: black; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .logo{
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+   
 }
 .since{
     font-size: 15px;
@@ -45,4 +56,51 @@ nav{
     cursor: pointer;
     color: #F9A602;
     transition: 0.3s;
+}
+.nav-menu{
+    display: flex;
+   
+}
+.nav-menu li{
+    list-style: none;
+    margin-left: 2rem;
+    
+}
+.nav-menu li a{
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+}
+.nav-menu li a:hover{
+    cursor: pointer;
+    color: #F9A602;
+    transition: 0.3s;
+}
+#about::before{
+    content: "01.";
+    margin-right: 10px;
+    color: #F9A602;
+    font-size: 13px;
+    
+}
+#work::before{
+    content: "02.";
+    margin-right: 10px;
+    color: #F9A602;
+    font-size: 13px;
+    
+}
+#social::before{
+    content: "03.";
+    margin-right: 10px;
+    color: #F9A602;
+    font-size: 13px;
+    
+}
+#resume::before{
+    content: "04.";
+    margin-right: 10px;
+    color: #F9A602;
+    font-size: 13px;
+    
 }
