--- a/style.css
+++ b/style.css
@@ -178,3 +178,96 @@ body{
     from, to { border-color: transparent }
     50% { border-color: #f9a602 }
 }
+
+.about-container{
+    margin: 0 450px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.about-content{
+    margin-left: 150px;
+    height: 500px;
+    width: 100%;
+    display: flex;
+    flex: 2;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.profile-photo{
+    flex: 1;
+    height: 500px
+}
+.about-header{
+    color: #ccd6f6;
+    font-weight: bold;
+    font-size: 30px;
+}
+.about-header::before{
+    content: "01.";
+    padding-right: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F9A602;
+}
+.about-header::after{
+    content: '';
+    position:absolute;
+    background-color: #233554;
+    height: 1px;
+    width: 300px;
+    margin-left: 20px;
+    margin-top: 25px;
+    
+}
+.about-detail{
+    margin-top: 50px;
+    color: #7d87a4;
+}
+.learn{
+    display: flex;
+    margin-top: 30px ;
+    justify-content: flex-start;
+
+}
+.learn div{
+   margin-right: 20px;
+    width: auto;
+    height: auto;
+    border: solid white 1px;
+    padding: 10px 10px;
+    color: white;
+}
+
+.HTML:hover{
+    color: #e34c26;
+    border: solid #e34c26 1px;
+    transition: 0.3s;
+}
+.WORDPRESS:hover{
+    color: pink;
+    border: solid pink 1px;
+    transition: 0.3s;
+}
+.CSS:hover{
+    color: #264de4;
+    border: solid #264de4 1px;
+    transition: 0.3s;
+}
+.JAVASCRIPT:hover{
+    color: #f0db4f;
+    border: solid #f0db4f 1px;
+    transition: 0.3s;
+}
+.profile-photo{
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+    opacity: 75%;
+}
+.profile-photo:hover{
+    opacity: 100%;
+    transition: 1s;
+}
