--- a/style.css
+++ b/style.css
@@ -635,3 +635,14 @@ body{
 .gallery > div {
     padding-right: 20px;
 }
+::-webkit-scrollbar{
+    width: 7.5px;
+}
+::-webkit-scrollbar-track{
+    background: black;
+}
+::-webkit-scrollbar-thumb{
+    background:#616D88;
+    
+}
+
