--- a/responsive.css
+++ b/responsive.css
@@ -1,349 +1,372 @@
-
-
-/* Responsive adjustments for smaller screens */
 @media screen and (max-width: 320px) {
-   
-    body{
-    width: 320px;
-  
-}
-.logo{
-    padding: 3rem;
-}
-.content{
-    width: 320px;
-}
-
-    .hero-container {
-        margin: 100px 0 0 0;
-        height: auto;
-        margin-top: 100px;
-        max-width: 320px;
+    nav{
+        display: flex;
+        flex-direction: column;
     }
-    .about-container{
-        max-width: 320px;
-    }
-    .work-container{
-        max-width: 320px;
-        height: auto;
-    }
-    .mycat-container{
-        max-width: 320px;
+    #pageContent{
+        display: flex;
+        flex-direction: column;
     }
     .nav-menu{
         display: none;
     }
-
-    .hero-content {padding: 4rem;
-        
-        
+    .logo {
+        margin-top: 20px;
     }
-    .one{
+    .hero-container{
+        margin: auto;
+        justify-content: center;
+        height: 400px;
+    }
+    .hero-content{
+        max-width: 320px;
+        padding: 2rem;
+        height: auto;
+    }
+    .two{
+        font-size: 20px;
+    }
+    .three{
         font-size: 10px;
-    }
-    .two {
-        font-size: 20px; /* Further decrease font size */
-    }
-
-    .three {
-        font-size: 10px; /* Further decrease font size */
     }
     .four{
-        font-size: 10px;
-    }
-
-    .nav-menu li {
-        margin-left: 0.5rem; /* Reduce margin between menu items */
-    }
-
-    .about-container {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-        justify-content: center;
-        align-items: center;
-    }
-        .about-header{
-            font-size: 20px;
-        }
-        .about-content{
-            margin: 0px;
-            
-            padding: 2rem;
-        }
-        .about-header::after{
-            display: none;
-        }
-        .about-detail{
-            font-size: 10px;
-        }
-
-       .learn{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-     
-       }
-       .HTML{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    .CSS{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    .JAVASCRIPT{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .WORDPRESS{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .profile-photo {
-        width: 250px !important;
-        height: 250px !important; 
-    }
-
-    .work-container {
-        margin: 0 10px; /* Further reduce margin */
-        padding-top: 50px; /* Reduce padding */
-    }
-
-    .mycat-container {
-        margin: 0 10px; /* Further reduce margin */
-        padding-top: 50px; /* Reduce padding */
-    }
-
-    .direction-l .flag:before,
-    .direction-r .flag:before {
-        top: -10px; /* Adjust position of flag */
-    }
-
-    .time-wrapper {
-        font-size: 0.6em; /* Decrease font size */
-    }
-.desc{
-    background-color: transparent;
-}
-.mycat-container{
-    margin-top: 900px;
-    
-}
-.cat-wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-ul{
-    padding: 1rem;
-}
-.desc ul li {
-    font-size: 12px;
-    color: white;
-    
-    
-}
-#ram{
-    font-size: 10px;
-}
-
-}
-
-
-
-
-#navbar.scroll {
-    background-color: black; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-#navbar{
-    position: sticky;
-    top: 0;
-}
-
-
-
-/* Responsive adjustments for smaller screens */
-@media screen and (max-width: 480px) {
-   
-    body{
-    width: 480px;
-  
-}
-.logo{
-    padding: 3rem;
-}
-.content{
-    width: 480px;
-}
-
-    .hero-container {
-        margin: 100px 0 0 0;
-        height: auto;
-        margin-top: 100px;
-        max-width: 480px;
+        font-size: 8px;
     }
     .about-container{
-        max-width: 480px;
-    }
-    .work-container{
-        max-width: 480px;
-        height: auto;
-    }
-    .mycat-container{
-        max-width: 480px;
-    }
-    .nav-menu{
-        display: none;
-    }
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-    .hero-content {padding: 4rem;
-        
-        
     }
-    .one{
-        font-size: 10px;
-    }
-    .two {
-        font-size: 20px; /* Further decrease font size */
-    }
-
-    .three {
-        font-size: 10px; /* Further decrease font size */
-    }
-    .four{
-        font-size: 10px;
-    }
-
-    .nav-menu li {
-        margin-left: 0.5rem; /* Reduce margin between menu items */
-    }
-
-    .about-container {
+    .about-content{
+        max-width: 320px;
         display: flex;
         flex-direction: column;
         margin: 0;
         padding: 0;
-        justify-content: center;
         align-items: center;
+        
     }
-        .about-header{
-            font-size: 20px;
-        }
-        .about-content{
-            margin: 0px;
-            
-            padding: 2rem;
-        }
-        .about-header::after{
-            display: none;
-        }
-        .about-detail{
-            font-size: 10px;
-        }
-
-       .learn{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-     
-       }
-       .HTML{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    .CSS{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    .JAVASCRIPT{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .WORDPRESS{
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .profile-photo {
-        width: 250px !important;
-        height: 250px !important; 
-    }
-
-    .work-container {
-        margin: 0 10px; /* Further reduce margin */
-        padding-top: 50px; /* Reduce padding */
-    }
-
-    .mycat-container {
-        margin: 0 10px; /* Further reduce margin */
-        padding-top: 50px; /* Reduce padding */
-    }
-
-    .direction-l .flag:before,
-    .direction-r .flag:before {
-        top: -10px; /* Adjust position of flag */
-    }
-
-    .time-wrapper {
-        font-size: 0.6em; /* Decrease font size */
-    }
-.desc{
-    background-color: transparent;
-}
-.mycat-container{
-    margin-top: 900px;
-    
-}
-.cat-wrapper{
+.about-detail{
+    font-size: 8px;
+    padding: 2rem;
+    margin: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
-ul{
-    padding: 1rem;
+.learn{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin:0 ;
 }
-.desc ul li {
-    font-size: 12px;
-    color: white;
-    
-    
+.about-header{
+    font-size: 20px;
 }
-#ram{
+.about-header::before{
+    font-size: 18px;
+    padding-left: 2rem;
+}
+.about-header::after{
+    display: none;
+}
+.profile-photo{
+    
+    margin: 0;
+}
+.HTML{
     font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+    margin-bottom: 1rem;
+    
+    
 }
+.CSS{
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+    margin-bottom: 1rem;
+    }
+    .JAVASCRIPT{
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+        height: auto;
+        }
+        .WORDPRESS{
+            font-size: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+            height: auto;
+            }
+            .work-container{
+                margin: 0;
+                padding: 0;
+                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+        
+            }
+            .work-header{
+                font-size: 20px;
+            }
+            .work-header::before{
+                font-size: 18px;
+                padding-left: 2rem;
+            }
+            .work-header::after{
+                display: none;
+            }
+            .work-wrapper{
+                display: flex;
+                flex-direction: column;
+            }
+           .timeline{
+            max-width: 320px;
+           }
+          .desc ul{
+            padding: 2rem;
+           
+          }
+          
+           .desc ul li{
+            font-size: 10px;
+            color: white;
 
-}
+           }
+        #ram{
+            font-weight: 5px;
+            font-size: 10px;
+        }
+        .mycat-container{
+           margin: 500px 0 0 0;
+            padding: 0;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+    
+        }
+        .cat-wrapper{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        
+        
+        }
+        .mycat-header{
+            font-size: 20px;
+        }
+        .mycat-header::before{
+            font-size: 18px;
+            padding-left: 2rem;
+        }
+        .mycat-header::after{
+            display: none;
+        }
+    }
 
-
-
-
-#navbar.scroll {
-    background-color: black; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-#navbar{
-    position: sticky;
-    top: 0;
-}
+    @media screen and (max-width: 420px) {
+        nav{
+            display: flex;
+            flex-direction: column;
+        }
+        #pageContent{
+            display: flex;
+            flex-direction: column;
+        }
+        .nav-menu{
+            display: none;
+        }
+        .logo {
+            margin-top: 20px;
+        }
+        .hero-container{
+            margin: auto;
+            justify-content: center;
+            height: 400px;
+        }
+        .hero-content{
+            max-width: 320px;
+            padding: 2rem;
+            height: auto;
+        }
+        .two{
+            font-size: 20px;
+        }
+        .three{
+            font-size: 10px;
+        }
+        .four{
+            font-size: 8px;
+        }
+        .about-container{
+            margin: 0;
+            padding: 0;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+    
+        }
+        .about-content{
+            max-width: 320px;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+            padding: 0;
+            align-items: center;
+            
+        }
+    .about-detail{
+        font-size: 8px;
+        padding: 2rem;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .learn{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin:0 ;
+    }
+    .about-header{
+        font-size: 20px;
+    }
+    .about-header::before{
+        font-size: 18px;
+        padding-left: 2rem;
+    }
+    .about-header::after{
+        display: none;
+    }
+    .profile-photo{
+        
+        margin: 0;
+    }
+    .HTML{
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+        height: auto;
+        margin-bottom: 1rem;
+        
+        
+    }
+    .CSS{
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+        height: auto;
+        margin-bottom: 1rem;
+        }
+        .JAVASCRIPT{
+            font-size: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+            height: auto;
+            }
+            .WORDPRESS{
+                font-size: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: auto;
+                height: auto;
+                }
+                .work-container{
+                    margin: 0;
+                    padding: 0;
+                    justify-content: center;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+            
+                }
+                .work-header{
+                    font-size: 20px;
+                }
+                .work-header::before{
+                    font-size: 18px;
+                    padding-left: 2rem;
+                }
+                .work-header::after{
+                    display: none;
+                }
+                .work-wrapper{
+                    display: flex;
+                    flex-direction: column;
+                }
+               .timeline{
+                max-width: 320px;
+               }
+              .desc ul{
+                padding: 2rem;
+               
+              }
+              
+               .desc ul li{
+                font-size: 10px;
+                color: white;
+    
+               }
+            #ram{
+                font-weight: 5px;
+                font-size: 10px;
+            }
+            .mycat-container{
+               margin: 500px 0 0 0;
+                padding: 0;
+                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                
+        
+            }
+            .cat-wrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            
+            
+            }
+            .mycat-header{
+                font-size: 20px;
+            }
+            .mycat-header::before{
+                font-size: 18px;
+                padding-left: 2rem;
+            }
+            .mycat-header::after{
+                display: none;
+            }
+        }
+    
+    
+    
