--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ body{
 .hero-content{
     display: flex;
     height: 600px;
-    width: 100%;
     flex-direction: column;
     padding-top: 200px;
 }
@@ -191,7 +190,6 @@ body{
 .about-content{
     margin-left: 150px;
     height: 500px;
-    width: 100%;
     display: flex;
     flex: 2;
     flex-direction: column;
@@ -281,7 +279,6 @@ body{
 }
 .work-wrapper{
     height: 500px;
-    width: 100%;
     padding-top: 100px;
 }
 .work-header{
@@ -513,7 +510,7 @@ body{
       width: 12px;
       height: 12px;
       margin-left: -9px;
-      background: #fff;
+      background: #ffffff;
       border-radius: 10px;
       border: 4px solid rgb(255,80,80);
       z-index: 10;
@@ -553,7 +550,7 @@ body{
       position: relative;
       margin: 1em 0 0 0;
       padding: 1em;
-      background: rgb(245,245,245);
+      background: transparent;
       -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
       -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
       box-shadow: 0 0 1px rgba(0,0,0,0.20);
